# X-ray_Defect_Detection

./: CMakeLists.txt  README.md  environment.yml  export.py  infer.py  train.py
src/: main.cpp
utils/: config.py
